        
More information about Infusion licensing is available in our wiki:

    http://wiki.fluidproject.org/display/fluid/Fluid+Licensing


Third Party Software in Infusion
--------------------------------
This is a list of publicly available software that is redistributed with Fluid Infusion, 
categorized by license:

MIT License:
    * jQuery javascript library v1.4.2: http://jquery.com/ 
    * jQuery UI dialog, draggable, mouse, position, and slider javascript widgets v1.8.12: http://ui.jquery.com/
    * jQuery UI tooltip (pre-release from jQuery 1.9 branch) https://github.com/jquery/jquery-ui/tree/tooltip
    * jQuery QUnit: http://docs.jquery.com/QUnit
    * jQuery Mockjax: https://github.com/appendto/jquery-mockjax
    * jQuery Chili code highlighter http://code.google.com/p/jquery-chili-js/ 
    * Micro Clearfix http://nicolasgallagher.com/micro-clearfix-hack/
    * SWFUpload v2.2.0.1: http://swfupload.org/
    * SWFObject v2.2: http://code.google.com/p/swfobject/

zlib/libpng License:
    * fastXmlPull is based on XML for Script's Fast Pull Parser v3.1
      (see: http://wiki.fluidproject.org/display/fluid/Licensing+for+fastXmlPull.js)
  
BSD License:
    * fss-reset-global.css and fss-reset-contextual are based on YUI's CSS reset styling v2.5.2
      see: http://developer.yahoo.com/yui/reset/
    * fss-base-global.css and fss-base-contextual are based on YUI's CSS base and fonts styling v2.5.2
      see: http://developer.yahoo.com/yui/base/
      see: http://developer.yahoo.com/yui/fonts/
    * Sample markup and stylesheets from uPortal v2.6 (http://www.uportal.org/)

ECL 2.0:
    * Sample markup and stylesheets from Sakai v2.5 (http://sakaiproject.org)

Other licenses:
    * Douglas Crockford's JSON.js (from 2007-11-06): http://www.json.org/ (Public Domain)
    * fss-layout.css uses some styles, related to hiding content, based on HTML5 Boilerplate v1.0
      see: https://github.com/paulirish/html5-boilerplate/blob/master/README.md (Public Domain)
