@@ -52,6 +52,7 @@
         <script type="text/javascript" src="../../../../components/uiOptions/js/UIEnhancer.js"></script>
         <script type="text/javascript" src="../../../../components/uiOptions/js/UIOptions.js"></script>
         <script type="text/javascript" src="../../../../components/uiOptions/js/FatPanelUIOptions.js"></script>
+        <script type="text/javascript" src="../../../../components/uiOptions/js/Tabs.js"></script>
         <script type="text/javascript" src="../../../../components/uiOptions/js/SlidingPanel.js"></script>
 
         <script type="text/javascript" src="../../../../components/tableOfContents/js/TableOfContents.js"></script>
