@@ -69,11 +69,12 @@ categorized by license:
 
 MIT License:
     * jQuery javascript library v1.4.2: http://jquery.com/ 
-    * jQuery UI dialog, draggable, mouse, position, and slider javascript widgets v1.8.12: http://ui.jquery.com/
+    * jQuery UI dialog, draggable, mouse, position, slider, and tabs javascript widgets v1.8.12: http://ui.jquery.com/
     * jQuery UI tooltip (pre-release from jQuery 1.9 branch) https://github.com/jquery/jquery-ui/tree/tooltip
     * jQuery QUnit: http://docs.jquery.com/QUnit
     * jQuery Mockjax: https://github.com/appendto/jquery-mockjax
     * jQuery Chili code highlighter http://code.google.com/p/jquery-chili-js/ 
+    * jQuery UI AriaTabs (12.07.10) https://github.com/fnagel/jQuery-Accessible-RIA/tree/master/Tabs
     * Micro Clearfix http://nicolasgallagher.com/micro-clearfix-hack/
     * SWFUpload v2.2.0.1: http://swfupload.org/
     * SWFObject v2.2: http://code.google.com/p/swfobject/
